JPMS build with tests
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>